# spatiotemporal-trajectory-forecasting

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: data_loader.py  evaluation.py  models.py  trainer.py  visualization.py
