[project]
name = "spatiotemporal-trajectory-forecasting"
version = "0.1.0"
description = "EEG signal forecasting using LSTM/GRU networks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    "torch>=2.4.0",
    "mne>=1.6.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.66.0",
    "pandas>=2.1.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
